# vitallocator

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  utils.rs
