[package]
name = "vitallocator"
version = "0.1.1"
authors = ["Martin Larralde <martin.larralde@ens-cachan.fr>"]
license = "MIT"
description = "A Rust allocator interface to the PS Vita kernel allocator"
repository = "https://github.com/vita-rust/vitallocator"
readme = "README.md"
keywords = ["ps-vita", "allocator"]
edition = "2018"
categories = ["no-std", "memory-management", "hardware-support"]

[package.metadata.docs.rs]
features = ["psp2-sys/dox"]

[dependencies]
psp2-sys = "^0.2"

[badges]
travis-ci   = { repository = "vita-rust/vitallocator" }
codecov     = { repository = "vita-rust/vitallocator" }
maintenance = { status = "actively-developed" }
